# flutter_tts

./: .gitignore  .last_build_id  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  analysis_options.yaml  build.yaml  flutter_bootstrap.js  flutter_service_worker.js  main.dart.js  main.dart.js.deps  main.dart.js.map  pubspec.yaml  version.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions-and-help.md
.github/workflows/: main.yml
android/: .project  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/eyedeadevelopers/fluttertts/: FlutterTtsPlugin.java
android/src/main/java/com/tundralabs/fluttertts/: FlutterTtsPlugin.java
android/src/main/kotlin/com/eyedeadevelopment/fluttertts/: FlutterTtsPlugin.kt
apps/example/: pubspec.yaml
apps/example/android/: .gitignore  settings.gradle.kts
apps/example/android/app/src/main/: AndroidManifest.xml
apps/example/android/gradle/wrapper/: gradle-wrapper.properties
apps/example/ios/Runner.xcodeproj/: project.pbxproj
apps/example/lib/: main.dart
apps/example/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/example/macos/Runner.xcodeproj/: project.pbxproj
apps/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/example/macos/Runner/Configs/: AppInfo.xcconfig
apps/example/test/: widget_test.dart
apps/example/web/: index.html
apps/example/windows/: .gitignore
apps/example/windows/runner/: Runner.rc
apps/example/winuwp/runner_uwp/: CMakeLists.txt
assets/: AssetManifest.smcbin  LICENSE  NOTICES
assets/shaders/: ink_sparkle.frag
docs/: PluginMigrationContext.md  index.html  main.dart.js  main.dart.js.map
docs/what get done.md/: what get done.md
example/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
example.app/Contents/: Info.plist
example.app/Contents/Frameworks/flutter_tts.framework/Versions/A/: flutter_tts
example.app/Contents/MacOS/: example
example.app/Contents/Resources/: AppIcon.icns  Assets.car
example.app/Contents/Resources/Base.lproj/: MainMenu.nib
example.app/Contents/_CodeSignature/: CodeResources
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Flutter/: .last_build_id  flutter_export_environment.sh
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: language_helper.dart  main.dart  non_web_language_helper.dart  web_language_helper.dart
example/macos/: .gitignore
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc
example/winuwp/: CMakeLists.txt
ios/: flutter_tts.podspec
ios/Classes/: AudioCategory.swift  AudioCategoryOptions.swift  AudioModes.swift  FlutterTtsPlugin.h  FlutterTtsPlugin.m  SwiftFlutterTtsPlugin.swift
lib/: flutter_tts.dart  flutter_tts_web.dart  interop_types.dart
lib/models/: models.dart  tts_voice.dart
lib/src/: flutter_tts.dart  flutter_tts_android.dart  flutter_tts_ios.dart  flutter_tts_macos.dart  flutter_tts_method_channel.dart  flutter_tts_native.dart  flutter_tts_platform_interface.dart  flutter_tts_web.dart  flutter_tts_web_interop_types.dart  messages.g.dart
macos/: flutter_tts.podspec
macos/Classes/: FlutterTtsPlugin.swift
pigeons/: messages.dart
tools/: generate_pigeons.dart
windows/: CMakeLists.txt  flutter_tts_plugin.cpp  messages.g.cpp  messages.g.h
windows/include/flutter_tts/: flutter_tts_plugin.h
(+11 files in other folders)
